# update_cdda_rust

./: Cargo.toml  config.ini
.github/workflows/: release.yml  rust.yml
src/: app.rs  main.rs  updater.rs  utils.rs
src/updater/: config.rs  current_game.rs  lastest_build.rs  platform.rs  utils.rs
