[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
curl = "0.4.44"
zip = "0.6.6"
tar = "0.4.38"
flate2 = "1.0.26"
fs_extra = "1.3.0"
eframe = "0.21.3"
egui_file = "0.8.2"
tokio = {version="1.28.1", features=["full"]}
flowync = {version="5.1.0", features=["compact"]}
pollster = "0.3.0"