[package]
name = "update_cdda"
version = "0.1.6"
edition = "2021"
description = "更新CDDA游戏\n配置文件在家目录的.config/update_cdda目录下"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
curl = "0.4.44"
zip = "0.6.6"
flate2 = "1.0.26"
fs_extra = "1.3.0"
tar = "0.4.40"
ini = "1.3.0"
home = "0.5.11"
clap = { version = "4.5.45", features = ["derive"] }
chrono = "0.4.39"
